# rand_write

./: Cargo.toml
.cargo/: config  config.toml
src/: main.rs
