[package]
name = "rand_wipe"
version = "0.1.0"
authors = ["Adam Lesperance <lespea@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
crossbeam = "0.7"
fs2 = "0.4"
humantime = "2.0"
indicatif = "0.14"
rand = "0.7"
rand_chacha = "0.2"
rand_hc = "0.2"
rand_isaac = "0.2"
structopt = { version = "0.3", default-features = false }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
codegen-units = 1
lto = true
debug = false
