[package]
name = "rand_wipe"
version = "0.1.0"
authors = ["Adam Lesperance <lespea@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1"
fs2 = "0.4"
humantime = "2.0"
indicatif = "0.17"
rand = "0.9"
rand_chacha = "0.9"
clap = { version = "4", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
codegen-units = 1
lto = true
debug = false
strip = true
